Add ids to input fields

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 					</h1> 
 				</div>
                 <div class="word-entry-area text-left">
-                    Noun: <input class="form-control" type="text" name="nounInput"><br>
+                    Noun: <input class="form-control" id="noun" type="text" name="nounInput"><br>
                 </div>
                 <div class="word-entry-area text-left">
-                    Verb: <input class="form-control" type="text" name="nounInput"><br>
+                    Verb: <input class="form-control" id="verb" type="text" name="nounInput"><br>
                 </div>
                 <div class="word-entry-area text-left">
-                    Adjective: <input class="form-control" type="text" name="nounInput"><br>
+                    Adjective: <input class="form-control" id="adjective" type="text" name="nounInput"><br>
                 </div>
             </div>
             <div class="col-4 text-center center-content-vh">
