Add some js stuff

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<script src="scripts.js" type="text/javascript"></script>
  </head>
  <body>
-
     <h1 align="center"> Dumb Joke Generator </h1>
     <br>
      
@@ -37,7 +36,7 @@
                 </div>
             </div>
             <div class="col-4 text-center center-content-vh">
-				<button type="button" class="btn btn-outline-dark btn-lg">Create Joke</button>
+				<button type="button" onClick="createJoke()" class="btn btn-outline-dark btn-lg">Create Joke</button>
             </div>
             <div class="col-4 text-center flex-vertical">
 				<h2 class="joke-header">Joke Result</h2>
