Joke templates/word switching is working! just need to fix a couple little things

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
             </div>
             <div class="col-4 text-center center-content-vh">
 				<button type="button" onClick="createJoke()" class="btn btn-outline-dark btn-lg">Create Joke</button>
+				<br>
+				<button type="button" onClick="clearText()" class="btn btn-outline-dark btn-lg">Clear</button>
             </div>
             <div class="col-4 text-center flex-vertical">
 				<h2 class="joke-header">Joke Result</h2>
 				<div class="joke-container"> 
 					<h4 id="joke">
-						This is where a funny joke will go when we have it.
+						<!-- This is where a funny joke will go when we have it. -->
 					</span>
 				</div>
             </div>
